@@ -125,6 +125,9 @@ Bug Fixes
 
 * SOLR-8460: /analysis/field could throw exceptions for custom attributes. (David Smiley, Uwe Schindler)
 
+* SOLR-8276: Atomic updates and realtime-get do not work with non-stored docvalues.
+  (Ishan Chattopadhyaya, yonik via shalin)
+
 Other Changes
 ----------------------
 
